--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "portfolio",
+  "name": "steveferguson.info",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "lint": "eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\"",
+    "astro:check": "astro check",
+    "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/svelte": "^4.0.3",
+    "@astrojs/svelte": "^5.0.3",
     "@fontsource-variable/stix-two-text": "^5.0.19",
     "@tweenjs/tween.js": "^21.0.0",
-    "astro": "^3.5.3",
+    "astro": "^5.7.4",
     "nanostores": "^0.9.5",
-    "svelte": "^4.2.3",
-    "three": "^0.158.0"
+    "svelte": "^4.2.20",
+    "three": "^0.158.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/three": "^0.158.0",
-    "@types/tween.js": "^18.6.1"
+    "@types/tween.js": "^18.6.1",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-jsx-a11y": "^6.9.0"
   }
 }
