--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "lint": "eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\"",
+    "astro:check": "astro check",
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.0.3",
@@ -19,6 +23,12 @@
   },
   "devDependencies": {
     "@types/three": "^0.158.0",
-    "@types/tween.js": "^18.6.1"
+    "@types/tween.js": "^18.6.1",
+    "@types/jsdom": "^21.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-jsx-a11y": "^6.9.0"
   }
 }
