--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/svelte": "^4.0.3",
     "@fontsource-variable/stix-two-text": "^5.0.19",
@@ -19,12 +20,13 @@
     "astro": "^3.5.3",
     "nanostores": "^0.9.5",
     "svelte": "^4.2.3",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/three": "^0.158.0",
     "@types/tween.js": "^18.6.1",
-    "@types/jsdom": "^21.1.7",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.2.0",
     "eslint": "^8.57.0",
