--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tweenjs/tween.js": "^21.0.0",
     "astro": "^3.5.3",
     "nanostores": "^0.9.5",
+    "sharp": "^0.34.2",
     "svelte": "^4.2.3",
     "three": "^0.158.0"
   },
